Added list of ingredients

--- a/recipe-page/index.html
+++ b/recipe-page/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Vietnamese Spring Rolls</title>
+    <meta charset ="utf-8">
   </head>
   <body>
-    <h1>Vietnamese Spring Rolls</h2>
-    <p>Light and healthy spring rolls, filled with shrimp, rice noodles, and fresh herbs/veggies. 
+    <h1>Vietnamese Spring Rolls</h1>
+    <p>Only way my mom got me to eat my veggies. Light and healthy spring rolls, filled with shrimp, rice noodles, and fresh herbs/veggies.
+      <ul>
+        <li>1 package of rice wrappers</li>
+        <li>2 ounces of rice vermicelli noodles</li>
+        <li>12 cooked shrimps</li>
+        <li>1 cup cilantro</li>
+        <li>7 butter lettuce leaves</li>
+        <li>1 cup bean sprouts</li>
+      </ul>
   </body>
 </html>
