--- a/recipe-page/index.html
+++ b/recipe-page/index.html
@@ -18,7 +18,7 @@
         <li>7 butter lettuce leaves</li>
         <li>1 cup bean sprouts</li>
       </ul>
-      <h2>Directions:</h2>
+      <h3>Directions:</h3>
         <ol>
           <li>Bring a pot of water to a boil. Let vermicelli noodles boil for 5 minutes, and drain into a colander and rinse noodles with cold water.</li>
           <li>Fill large bowl with hot water and in a circular motion, dip rice wrapper into hot water to soften. Lay soften wrapper on flat surface.</li>
@@ -26,5 +26,8 @@
           <li>Fold in sides first. Then tightly roll the wrapper upwards.</li>
           <li>Repeat</li>
         </ol>
+      <h2>Different versions to try:</h2>
+      <p><a href="https://www.thekitchn.com/recipe-how-to-make-summer-rolls-with-vegetables-mint-spicy-peanut-sauce-49315" target="_blank">The Kitchn: Veggies Summer Roll</a></p>
+      <p><a href="https://minimalistbaker.com/vietnamese-spring-rolls-with-crispy-tofu/" target="_blank">Minimalist Baker: Crispy Tofu Spring Rolls</a></p>
   </body>
 </html>
