Added video and footer

--- a/recipe-page/index.html
+++ b/recipe-page/index.html
@@ -7,7 +7,7 @@
   <body>
     <div class="top">
       <h1>Vietnamese Spring Rolls</h1>
-      <p>Only way my mom got me to eat my veggies! Light and healthy spring rolls, filled with shrimp, rice noodles, and fresh herbs/veggies.<br><br>
+      <p>Only way my mom got me to eat my veggies! Light and healthy spring rolls, filled with shrimp, rice noodles, and fresh herbs/veggies.<br>
     </div>
     <div class="left">
 
@@ -16,6 +16,7 @@
         <p>Photo credit: <a href ="https://www.recipetineats.com/vietnamese-rice-paper-rolls-spring-rolls/" target="_blank">RecipeTin Eats</a></p>
       </div>
       <div>
+          <h3>Ingredients:</h3>
           <ul>
             <li>2 ounces of rice vermicelli noodles</li>
             <li>1 package of rice wrappers</li>
@@ -39,13 +40,17 @@
               <li>Fold in sides first. Then tightly roll the wrapper upwards.</li>
               <li>Repeat</li>
             </ol>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/IfI1wMeDXhg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
         <div>
           <h2>Different versions to try:</h2>
           <p><a href="https://www.thekitchn.com/recipe-how-to-make-summer-rolls-with-vegetables-mint-spicy-peanut-sauce-49315" target="_blank">The Kitchn: Veggies Summer Roll</a></p>
           <p><a href="https://minimalistbaker.com/vietnamese-spring-rolls-with-crispy-tofu/" target="_blank">Minimalist Baker: Crispy Tofu Spring Rolls</a></p>
         </div>
-        
+
       </div>
+      <footer>
+        <p>Created by: Vivian San<br>
+        <strong>email:</strong> vs@gmail.org | <strong>twitter: </strong>@VsanFrancisco</p>
   </body>
 </html>
