--- a/recipe-page/index.html
+++ b/recipe-page/index.html
@@ -53,5 +53,6 @@
       <footer>
         <p>Created by: Vivian San<br>
         <strong>email:</strong> vs@gmail.org | <strong>twitter: </strong>@VsanFrancisco</p>
+        <p><a href="./index.html">Recipe</a> || <a href="./contactme.html">Contact Me</a></p>
   </body>
 </html>
