--- a/recipe-page/index.html
+++ b/recipe-page/index.html
@@ -7,6 +7,7 @@
   <body>
     <div class="top">
       <h1>Vietnamese Spring Rolls</h1>
+      <hr>
       <p>Only way my mom got me to eat my veggies! Light and healthy spring rolls, filled with shrimp, rice noodles, and fresh herbs/veggies.<br>
     </div>
     <div class="left">
@@ -41,7 +42,7 @@
               <li>Repeat</li>
             </ol>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/IfI1wMeDXhg" alt="Video on how to roll spring rolls" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-
+            <video src ="https://www.youtube.com/embed/IfI1wMeDXhg"></video>
         </div>
         <div>
           <h2>Different versions to try:</h2>
@@ -54,5 +55,6 @@
         <p>Created by: Vivian San<br>
         <strong>email:</strong> vs@gmail.org | <strong>twitter: </strong>@VsanFrancisco</p>
         <p><a href="./index.html">Recipe</a> || <a href="./contactme.html">Contact Me</a></p>
+      </footer>
   </body>
 </html>
