--- a/recipe-page/index.html
+++ b/recipe-page/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Vietnamese Spring Rolls</title>
     <meta charset ="utf-8">
+    <link rel="stylesheet" type="text/css" href="static/css/styles.css">
   </head>
   <body>
     <div class="top">
