--- a/recipe-page/index.html
+++ b/recipe-page/index.html
@@ -4,10 +4,11 @@
     <title>Vietnamese Spring Rolls</title>
     <meta charset ="utf-8">
     <link rel="stylesheet" type="text/css" href="static/css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Open+Sans+Condensed:300|Poiret+One" rel="stylesheet">
   </head>
   <body>
     <div class="top">
-      <h1>Vietnamese Spring Rolls</h1>
+      <h1 class="head">Vietnamese Spring Rolls</h1>
       <hr>
       <p>Only way my mom got me to eat my veggies! Light and healthy spring rolls, filled with shrimp, rice noodles, and fresh herbs/veggies.<br>
     </div>
@@ -18,7 +19,7 @@
         <p>Photo credit: <a href ="https://www.recipetineats.com/vietnamese-rice-paper-rolls-spring-rolls/" target="_blank">RecipeTin Eats</a></p>
       </div>
       <div>
-          <h3>Ingredients:</h3>
+          <h2 class="subhead">Ingredients:</h2>
           <ul>
             <li>2 ounces of rice vermicelli noodles</li>
             <li>1 package of rice wrappers</li>
@@ -34,7 +35,7 @@
       <div class="right">
 
         <div>
-          <h3>Directions:</h3>
+          <h2 class="subhead">Directions:</h2>
             <ol>
               <li>Bring a pot of water to a boil. Let vermicelli noodles boil for 5 minutes, and drain into a colander and rinse noodles with cold water.</li>
               <li>Fill large bowl with hot water and in a circular motion, dip rice wrapper into hot water to soften. Lay soften wrapper on flat surface.</li>
@@ -45,7 +46,7 @@
             <iframe width="560" height="315" src="https://www.youtube.com/embed/IfI1wMeDXhg" alt="Video on how to roll spring rolls" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
         <div>
-          <h2>Different versions to try:</h2>
+          <h2 class="subhead">Different versions to try:</h2>
           <p><a href="https://www.thekitchn.com/recipe-how-to-make-summer-rolls-with-vegetables-mint-spicy-peanut-sauce-49315" target="_blank">The Kitchn: Veggies Summer Roll</a></p>
           <p><a href="https://minimalistbaker.com/vietnamese-spring-rolls-with-crispy-tofu/" target="_blank">Minimalist Baker: Crispy Tofu Spring Rolls</a></p>
         </div>
