Constrain description width to 600px

--- a/recipe-page/index.html
+++ b/recipe-page/index.html
@@ -10,7 +10,7 @@
     <div class="top">
       <h1 class="head">Vietnamese Spring Rolls</h1>
       <hr>
-      <p>Only way my mom got me to eat my veggies! Light and healthy spring rolls, filled with shrimp, rice noodles, and fresh herbs/veggies.<br>
+      <p class="description">Only way my mom got me to eat my veggies! Light and healthy spring rolls, filled with shrimp, rice noodles, and fresh herbs/veggies.<br>
     </div>
     <div class="left">
 
