--- a/recipe-page/index.html
+++ b/recipe-page/index.html
@@ -51,10 +51,10 @@
         </div>
       </div>
 
-      <footer>
+      <!-- <footer>
         <p>Created by: Vivian San<br>
         <strong>email:</strong> vs@gmail.org | <strong>twitter: </strong>@VsanFrancisco</p>
         <p><a href="./index.html">Recipe</a> || <a href="./contactme.html">Contact Me</a></p>
-      </footer>
+      </footer> -->
   </body>
 </html>
